# OpenAgentCompiler

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  PERMISSION_EXPERIMENT.md  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
concepts/agent-model/: index.html
concepts/execution-tiers/: index.html
concepts/philosophy/: index.html
concepts/registry-and-compilation/: index.html
dev-guide/: index.html
dialects/claude-code/: index.html
dialects/codex/: index.html
dialects/opencode/: index.html
dialects/pi/: index.html
docs/: dev-guide.md  index.md
docs/concepts/: agent-model.md  execution-tiers.md  philosophy.md  registry-and-compilation.md
docs/dialects/: claude-code.md  codex.md  opencode.md  pi.md
docs/getting-started/: first-agent.md  installation.md  project-scaffold.md
docs/guides/: evolve-coding-harness.md  improvement-loop.md  interactive-tier.md  langchain-runtime.md  native-tools.md  optimization-targets.md  skills.md  testing.md  tools.md  variants-and-profiles.md  workflows-and-subagents.md
docs/lessons/: optimize-the-real-goal-not-text-correctness.md  thinking-models-and-opencode-scoring.md  tuning-a-local-agent-fleet.md
docs/reference/: cli.md  examples.md  retrieval-testing.md  troubleshooting.md
docs/tutorials/: database-reporting-tool.md  fast-chat-slow-worker.md  index.md  one-agent-three-models.md  self-improving-agent.md  support-triage-bot.md
examples/: README.md  build_agent.py  build_orchestrator.py
examples/00_hello/: README.md  agents.py  build_agents.py
examples/10_multi_provider/: README.md  agents.py  build_agents.py
examples/20_optimization_run/: README.md  agents.py  improve_run.py
examples/25_per_model_optimization/: README.md  agents.py  improve_run.py
examples/26_promote_and_reload/: README.md  agents.py  run_cycle.py
examples/27_composable_improvements/: README.md  agents.py  build_agents.py  seed_improvements.py
examples/28_context_blocks/: README.md  build_prompt.py
examples/29_long_running_task/: README.md  slow_tool.py
examples/30_tools/: README.md  agents.py  build_agents.py
examples/31_spawn_agent/: README.md  spawn_demo.py
examples/32_multi_turn_mocks/: README.md  agents.py
examples/33_sqlite_resources/: README.md
examples/34_mcp_per_agent/: README.md  agents.py
examples/35_fastapi_dispatch/: README.md  dispatch_demo.py
examples/36_mcp_server/: README.md  show_scaffold.py
examples/40_subagents/: README.md  agents.py  build_agents.py
examples/50_primary_dispatch/: README.md  agents.py  build_agents.py
examples/60_workflow_agent/: README.md  agents.py  build_agents.py
examples/70_oac_test/: README.md  agents.py
examples/80_pi_agents/: README.md  agents.py  build_agents.py  build_both.py
examples/81_pi_exploration/: README.md  agents.py  build_agents.py
examples/85_matrix_live_chat/: README.md  agents.py  build_matrix.py  improve_matrix.py  live_chat.py
examples/90_init_scaffold/: README.md  scaffold.py
examples/91_saas_personalized/: README.md  scaffold.py
examples/_shared/: opencode_runtime.py
examples/scripts/: db_query.py  file_search.py
getting-started/first-agent/: index.html
getting-started/installation/: index.html
getting-started/project-scaffold/: index.html
guides/evolve-coding-harness/: index.html
guides/improvement-loop/: index.html
guides/interactive-tier/: index.html
guides/langchain-runtime/: index.html
guides/native-tools/: index.html
guides/optimization-targets/: index.html
guides/skills/: index.html
guides/testing/: index.html
guides/tools/: index.html
guides/variants-and-profiles/: index.html
guides/workflows-and-subagents/: index.html
lessons/optimize-the-real-goal-not-text-correctness/: index.html
lessons/thinking-models-and-opencode-scoring/: index.html
lessons/tuning-a-local-agent-fleet/: index.html
notebooks/: 00_initial_structure_jupyter.ipynb  01_registry_example.ipynb  quick-ack-subagent.md
open_agent_compiler/: __init__.py  runtime.py  runtime_spawn.py
open_agent_compiler/cli/: __init__.py  main.py
open_agent_compiler/compiler/: build_graph.py  compile.py  native_tools.py  reader.py  script.py
open_agent_compiler/datasource/: __init__.py  adapter.py  profile.py  tools.py
open_agent_compiler/evolve/: __init__.py  isolate.py  package.py  recon.py  reference.py  replay.py  synthesize.py
open_agent_compiler/improvement/: __init__.py  autoresearch.py  branch.py  chart.py  compile_helpers.py  compiled_eval.py  contract_gate.py  criteria.py  eval_compile.py  fleet.py  harness_eval.py  improvement_agent.py  interactive_eval.py  long_running.py  loop.py  opencode_eval.py  probe_cache.py  prompt_sections.py  scoring.py  snapshot.py  source_apply.py  split_loop.py  store.py  target_loop.py  version.py
open_agent_compiler/interactive/: __init__.py  events.py  prompt.py  runner.py  schema.py  spec.py
open_agent_compiler/model/: __init__.py
open_agent_compiler/personalization/: __init__.py  compile.py  elicit.py  judge.py  probes.py  run.py  spec.py
open_agent_compiler/scaffold/: __init__.py  config.py  engine.py  manifest.py
open_agent_compiler/scripts/: __init__.py  opencode_manager.py  subagent_todo.py  workspace_io.py
open_agent_compiler/skills/: __init__.py  bundle.py  emitters.py  registry.py
open_agent_compiler/testing/: __init__.py  artifact.py  artifacts.py  branch.py  discover.py  evaluation.py  incremental.py  orchestrate.py  probe_pack.py  provider_guard.py
open_agent_compiler/workflow/: __init__.py  dag.py  executor.py
reference/cli/: index.html
reference/examples/: index.html
reference/retrieval-testing/: index.html
reference/troubleshooting/: index.html
scripts/core/: opencode_manager.py
scripts/example/: hello.py  random_word.py
search/: search_index.json
src/open_agent_compiler/: __init__.py  _types.py  (+3 more)
tests/: conftest.py  test_compiler.py  test_imports.py  test_inline_skills.py  test_postfix.py  test_public_api.py  test_runtime.py
tutorials/: index.html
(+297 files in other folders)
