[project]
name = "agent-framework"
version = "0.1.0"
description = "Python-first agent framework that compiles agent definitions into backend-specific configurations"
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ignacy Daszkiewicz"},
]
keywords = ["agent", "framework", "compiler", "opencode", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3",
]
bench = [
    "pytest-benchmark>=4",
]
testing = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/DehydratedWater/OpenAgentCompiler"
Repository = "https://github.com/DehydratedWater/OpenAgentCompiler"
Issues = "https://github.com/DehydratedWater/OpenAgentCompiler/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_agent_compiler"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# ScriptTool uses Generic[] for __orig_bases__ introspection — PEP 695 breaks it
"src/open_agent_compiler/runtime.py" = ["UP046"]
# Bundled scripts copied verbatim from v2 — not our code to lint
"src/open_agent_compiler/scripts/subagent_todo.py" = ["ALL"]
"src/open_agent_compiler/scripts/opencode_manager.py" = ["ALL"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["open_agent_compiler"]
mypy_path = "src"

[[tool.mypy.overrides]]
# Bundled scripts copied verbatim from v2 — skip type checking
module = ["open_agent_compiler.scripts.subagent_todo", "open_agent_compiler.scripts.opencode_manager"]
ignore_errors = true
