[project]
name = "open-agent-compiler"
version = "1.16.2"
description = "Python-first agent framework: define composable agent trees once, compile them to multiple agent runtimes (opencode, Claude Code, Pi, Codex), auto-optimize them per harness and model with test-driven autoloops, and evolve repo-tailored coding harnesses."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ignacy Daszkiewicz" }]
keywords = ["agent", "framework", "compiler", "llm", "ai", "opencode", "claude-code", "pi-agent", "codex", "prompt-optimization", "coding-harness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.13.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# The interactive target's LangChain binding. Optional — the compiler core
# stays dependency-light; only consumers building the interactive/streaming
# layer install this.
langchain = [
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
]
# The interactive target's PydanticAI binding — the alternative realtime
# framework. Same rules: optional, lazily imported.
pydantic-ai = [
    "pydantic-ai-slim[openai]>=0.4",
]

[project.urls]
Homepage = "https://github.com/DehydratedWater/OpenAgentCompiler"
Repository = "https://github.com/DehydratedWater/OpenAgentCompiler"
Documentation = "https://dehydratedwater.github.io/OpenAgentCompiler/"
Changelog = "https://github.com/DehydratedWater/OpenAgentCompiler/releases"

[project.scripts]
oac = "open_agent_compiler.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["open_agent_compiler"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "jupyter>=1.1.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.11",
    "pre-commit>=4.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "pydantic-ai-slim[openai]>=0.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error::DeprecationWarning",
    "ignore::DeprecationWarning:jupyter_client.*",
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["notebooks", "examples/*/build*", "examples/*/improved"]

[tool.ruff.lint.per-file-ignores]
# The package root re-exports the public API surface for convenience;
# not every re-export is (yet) part of the stable __all__ contract.
"open_agent_compiler/__init__.py" = ["F401"]
# Bundled runtime scripts are written in a deliberately compact style.
"open_agent_compiler/scripts/*.py" = ["E702"]
# Tests use compact one-line statements, post-sys.path imports, and
# intentionally-unused results ("does not raise" checks).
"tests/*" = ["E402", "E702", "F841"]
